# name: test_entity_with_display_information
  '<MaltegoMessage><MaltegoTransformResponseMessage><Entities><Entity Type="maltego.Phrase"><Value>Hello Spencer!</Value><Weight>100</Weight><DisplayInformation><Label Name="Display Info Title" Type="text/html">&lt;p&gt;Display Info Content&lt;/p&gt;</Label></DisplayInformation></Entity></Entities><UIMessages></UIMessages></MaltegoTransformResponseMessage></MaltegoMessage>'
# ---
# name: test_entity_with_icon
  '<MaltegoMessage><MaltegoTransformResponseMessage><Entities><Entity Type="maltego.Phrase"><Value>Hello Spencer!</Value><Weight>100</Weight><IconURL>https://www.maltego.com/img/maltego-logo/maltego-horizontal.png</IconURL></Entity></Entities><UIMessages></UIMessages></MaltegoTransformResponseMessage></MaltegoMessage>'
# ---
# name: test_entity_with_overlays
  '<MaltegoMessage><MaltegoTransformResponseMessage><Entities><Entity Type="maltego.Phrase"><Value>Hello Spencer!</Value><Weight>100</Weight><Overlays><Overlay position="NW" propertyName="#45e06f" type="colour"></Overlay></Overlays></Entity></Entities><UIMessages></UIMessages></MaltegoTransformResponseMessage></MaltegoMessage>'
# ---
# name: test_entity_with_properties
  '<MaltegoMessage><MaltegoTransformResponseMessage><Entities><Entity Type="maltego.Phrase"><Value>Hello Spencer!</Value><Weight>100</Weight><AdditionalFields><Field DisplayName="displayNameTest" MatchingRule="loose" Name="fieldNameTest">valueTest</Field><Field DisplayName="displayNameTest2" MatchingRule="strict" Name="fieldNameTest2">valueTest2</Field></AdditionalFields></Entity></Entities><UIMessages></UIMessages></MaltegoTransformResponseMessage></MaltegoMessage>'
# ---
# name: test_entity_with_value
  '<MaltegoMessage><MaltegoTransformResponseMessage><Entities><Entity Type="maltego.Phrase"><Value>Hello Spencer!</Value><Weight>100</Weight></Entity></Entities><UIMessages></UIMessages></MaltegoTransformResponseMessage></MaltegoMessage>'
# ---
# name: test_exception_message
  '<MaltegoMessage><MaltegoTransformResponseMessage><Entities></Entities><UIMessages><UIMessage MessageType="PartialError">Test Exception</UIMessage></UIMessages></MaltegoTransformResponseMessage></MaltegoMessage>'
# ---
# name: test_response_with_exception
  '<MaltegoMessage><MaltegoTransformExceptionMessage><Exceptions><Exception>Test Exception</Exception></Exceptions></MaltegoTransformExceptionMessage></MaltegoMessage>'
# ---
# name: test_response_with_ui_message
  '<MaltegoMessage><MaltegoTransformResponseMessage><Entities></Entities><UIMessages><UIMessage MessageType="inform">Test Message</UIMessage></UIMessages></MaltegoTransformResponseMessage></MaltegoMessage>'
# ---
